# bf-rs

./: Cargo.toml  README.md  riscv_sequences.s
src/: cli.rs  main.rs
src/brainfuck/: interpreter.rs  ir.rs  jit.rs  mod.rs  program.rs
src/brainfuck/jit/: mod.rs  riscv64_linux.rs  x86_64_linux.rs  x86_64_windows.rs
test_programs/: beer.bf  fibonacci.bf  pity.bf  powers_of_2.bf  test.bf
