[package]
name = "brainrust"
version = "0.1.0"
edition = "2021"

# [build]
# target = "x86_64-pc-windows-msvc"

[lints.rust]
unused = "allow"

[dependencies]
bytemuck = "1.18.0"
cfg-if = "1.0.0"
clap = { version = "4.5.17", features = ["derive"] }
enum-tag = "0.3.0"
nix = { version = "0.29.0", features = ["mman"] }
windows = { version = "0.58.0", features = ["Win32"] }
